--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -175,31 +175,22 @@ function speak(text, rate = 0.8, lang = "en-US") {
         return;
     }
 
-    const availableVoice = getAvailableVoice(lang);
-
-    if (availableVoice.lang !== lang && !hasWarnedUserAboutLang) {
-        alert(
-            `The English (US) language pack is not installed or available on your device. Please install it for the best experience. Defaulting to ${availableVoice.lang}.`
-        );
-        hasWarnedUserAboutLang = true;
-    }
+    const voices = synth.getVoices();
+    const voice = voices.find(v => v.lang === lang) || voices[0]; // Pega a voz correta ou a primeira disponível
 
     const utterance = new SpeechSynthesisUtterance(text);
-    utterance.lang = availableVoice.lang;
-    utterance.voice = availableVoice;
+    utterance.voice = voice;
+    utterance.lang = lang;
     utterance.rate = rate;
 
     utterance.onstart = () => {
-        isSpeaking = true;
-        resetStaticTimer();
-        robotImg.src = ROBOT_GIF;
         console.log("Robot started speaking...");
+        robotImg.src = ROBOT_GIF;
     };
 
     utterance.onend = () => {
-        isSpeaking = false;
-        robotImg.src = ROBOT_STATIC;
         console.log("Robot finished speaking...");
+        robotImg.src = ROBOT_STATIC;
     };
 
     synth.speak(utterance);
