--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -61,7 +61,7 @@
     <h1>Talk to Robot Samuel</h1>
     <img id="robot-img" src="../../imagens/robo1_static.png" alt="Robot">
     <p id="message" style="visibility: hidden;">Loading...</p>
-    <button id="speak-button">Press to Start</button>
+    <button id="speak-button" style="display: none;">Press to Start</button>
     <button id="back-button">Back</button>
 
     <!-- Firebase SDK -->
@@ -290,6 +290,9 @@ async function initializeConversation() {
 
                 messageElement.style.visibility = "hidden"; // Mensagem inicial será exibida após o clique
 
+                // Exibe o botão "Press to Start" após a resposta do servidor
+                speakButton.style.display = "block";
+
                 if (!speakButton.hasAttribute('data-initialized')) {
                     speakButton.setAttribute('data-initialized', 'true');
 
@@ -304,10 +307,9 @@ async function initializeConversation() {
                     });
                 }
             } catch (error) {
-               console.error("Error initializing conversation:", error);
-               messageElement.innerText = "An unexpected error occurred. Try again later.";
-               speakButton.disabled = true;
-                messageElement.innerText = "Error initializing conversation. Please refresh and try again.";
+                console.error("Error initializing conversation:", error);
+                messageElement.innerText = "An unexpected error occurred. Try again later.";
+                speakButton.disabled = true;
                 messageElement.style.visibility = "visible";
             }
         } else {
