--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -20,6 +20,9 @@
         #robot-img {
             width: 200px;
         }
+.green-text {
+    color: green;
+}
         #speak-button {
             background-color: green;
             color: white;
@@ -62,9 +65,9 @@
     <img id="robot-img" src="../../imagens/robo1_static.png" alt="Robot">
 
 <div style="margin-top: 20px; text-align: center;">
-    <label for="voice-speed">Playback Speed:</label>
+    <label for="voice-speed" class="green-text">Playback Speed:</label>
     <input id="voice-speed" type="range" min="0.5" max="2" step="0.1" value="1" style="width: 200px;">
-    <span id="speed-display">1x</span>
+    <span id="speed-display" class="green-text">1x</span>
 </div>
 
     <p id="message" style="visibility: hidden;">Loading...</p>
