--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -23,6 +23,55 @@
 .green-text {
     color: green;
 }
+/* Estiliza a barra (track) */
+input[type="range"] {
+    -webkit-appearance: none; /* Remove o estilo padrão */
+    width: 200px;
+    height: 8px;
+    background: #ccc; /* Cor de fundo da barra */
+    border-radius: 5px;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity 0.2s;
+}
+
+input[type="range"]:hover {
+    opacity: 1; /* Torna a barra mais visível ao passar o mouse */
+}
+
+/* Estiliza o preenchimento da barra (parte antes do thumb) */
+input[type="range"]::-webkit-slider-runnable-track {
+    background: green; /* Cor verde */
+    border-radius: 5px;
+    height: 8px;
+}
+
+input[type="range"]::-moz-range-track {
+    background: green; /* Para Firefox */
+    border-radius: 5px;
+    height: 8px;
+}
+
+/* Estiliza o thumb (bolinha) */
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    background: green; /* Thumb verde */
+    border-radius: 50%;
+    cursor: pointer;
+    border: 1px solid #000;
+}
+
+input[type="range"]::-moz-range-thumb {
+    width: 15px;
+    height: 15px;
+    background: green; /* Thumb verde para Firefox */
+    border-radius: 50%;
+    cursor: pointer;
+    border: 1px solid #000;
+}
         #speak-button {
             background-color: green;
             color: white;
@@ -65,9 +114,9 @@
     <img id="robot-img" src="../../imagens/robo1_static.png" alt="Robot">
 
 <div style="margin-top: 20px; text-align: center;">
-    <label for="voice-speed" class="green-text">Playback Speed:</label>
-    <input id="voice-speed" type="range" min="0.5" max="2" step="0.1" value="1" style="width: 200px;">
-    <span id="speed-display" class="green-text">1x</span>
+    <label for="voice-speed" style="color: green;">Playback Speed:</label>
+    <input id="voice-speed" type="range" min="0.5" max="2" step="0.1" value="1">
+    <span id="speed-display" style="color: green;">1x</span>
 </div>
 
     <p id="message" style="visibility: hidden;">Loading...</p>
