--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -23,15 +23,15 @@
 .green-text {
     color: green;
 }
-/* Estiliza a barra (track) */
+/* Estiliza o track completo da barra */
 input[type="range"] {
     -webkit-appearance: none; /* Remove o estilo padrão */
     width: 200px;
     height: 8px;
-    background: #ccc; /* Cor de fundo da barra */
+    background: #ccc; /* Cor do track completo (após a bolinha) */
     border-radius: 5px;
     outline: none;
-    opacity: 0.7;
+    opacity: 0.9;
     transition: opacity 0.2s;
 }
 
@@ -39,15 +39,21 @@ input[type="range"]:hover {
     opacity: 1; /* Torna a barra mais visível ao passar o mouse */
 }
 
-/* Estiliza o preenchimento da barra (parte antes do thumb) */
+/* Estiliza a parte preenchida antes da bolinha (usando gradient) */
 input[type="range"]::-webkit-slider-runnable-track {
-    background: green; /* Cor verde */
+    background: linear-gradient(to right, green 0%, green var(--progress), #ccc var(--progress), #ccc 100%);
+    border-radius: 5px;
+    height: 8px;
+}
+
+input[type="range"]::-moz-range-progress {
+    background: green; /* Para Firefox: parte preenchida */
     border-radius: 5px;
     height: 8px;
 }
 
 input[type="range"]::-moz-range-track {
-    background: green; /* Para Firefox */
+    background: #ccc; /* Para Firefox: parte não preenchida */
     border-radius: 5px;
     height: 8px;
 }
