--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -25,14 +25,13 @@
 }
 /* Estiliza o track completo da barra */
 input[type="range"] {
-    -webkit-appearance: none; /* Remove o estilo padrão */
+    -webkit-appearance: none;
     width: 200px;
     height: 8px;
-    background: #ccc; /* Cor do track completo (após a bolinha) */
+    background: linear-gradient(to right, green var(--progress), #ccc var(--progress), #ccc 100%);
     border-radius: 5px;
     outline: none;
-    opacity: 0.9;
-    transition: opacity 0.2s;
+    transition: background 0.2s;
 }
 
 input[type="range"]:hover {
@@ -64,7 +63,7 @@ input[type="range"]::-webkit-slider-thumb {
     appearance: none;
     width: 15px;
     height: 15px;
-    background: green; /* Thumb verde */
+    background: green;
     border-radius: 50%;
     cursor: pointer;
     border: 1px solid #000;
@@ -169,17 +168,18 @@ let alternateTimeout; // Timeout para alternar imagens
 let userId = null; // ID do usuário
 let chatHistory = []; // Histórico do chat
 
-// Atualiza a exibição da velocidade quando o slider é movido
-speedSlider.addEventListener("input", () => {
-    const speed = speedSlider.value;
-    speedDisplay.textContent = `${speed}x`; // Atualiza a exibição da velocidade
-});
-
-// Atualiza o preenchimento da barra com base no valor do slider
-speedSlider.addEventListener("input", () => {
+// Função para atualizar o preenchimento e exibição do slider
+function updateSliderBackground() {
     const value = ((speedSlider.value - speedSlider.min) / (speedSlider.max - speedSlider.min)) * 100;
-    speedSlider.style.setProperty("--progress", `${value}%`);
-});
+    speedSlider.style.setProperty("--progress", `${value}%`); // Atualiza o preenchimento da barra
+    speedDisplay.textContent = `${speedSlider.value}x`; // Atualiza a exibição da velocidade
+}
+
+// Adiciona o evento ao mover o slider
+speedSlider.addEventListener("input", updateSliderBackground);
+
+// Inicializa o preenchimento quando a página carregar
+window.onload = updateSliderBackground;
 
         // Botão de voltar
         backButton.addEventListener("click", () => window.history.back());
