--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -28,7 +28,7 @@ input[type="range"] {
     -webkit-appearance: none;
     width: 200px;
     height: 8px;
-    background: linear-gradient(to right, green var(--progress), #ccc var(--progress), #ccc 100%);
+    background: linear-gradient(to right, green var(--progress, 50%), #ccc var(--progress, 50%), #ccc 100%);
     border-radius: 5px;
     outline: none;
     transition: background 0.2s;
@@ -178,10 +178,10 @@ function updateSliderBackground() {
 // Adiciona o evento ao mover o slider
 speedSlider.addEventListener("input", updateSliderBackground);
 
-// Inicializa o preenchimento quando a página carregar
-window.onload = updateSliderBackground;
-
-        // Botão de voltar
+// Inicializa o preenchimento assim que a página carregar
+window.addEventListener("DOMContentLoaded", updateSliderBackground);
+       
+ // Botão de voltar
         backButton.addEventListener("click", () => window.history.back());
 
         // Alternar imagem após 20 segundos de inatividade
