--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -23,7 +23,6 @@
         .green-text {
             color: green;
         }
-        /* Estiliza o track completo da barra */
         input[type="range"] {
             -webkit-appearance: none;
             width: 200px;
@@ -121,7 +120,6 @@
     <button id="speak-button" style="display: none;">Press to Start</button>
     <button id="back-button">Back</button>
 
-    <!-- Fallback Input para Navegadores sem Suporte -->
     <div id="fallback-input" style="display: none; margin-top: 20px;">
         <input type="text" id="user-input" placeholder="Type your message...">
         <button id="send-button">Send</button>
@@ -159,12 +157,12 @@
         const ROBOT_ALTERNATE = "../../imagens/robo2.gif";
 
         // Variáveis globais
-        let recognition; // Para o reconhecimento de voz
-        let isSpeaking = false; // Indica se o robô está falando
-        let staticTime = 0; // Tempo de inatividade
-        let alternateTimeout; // Timeout para alternar imagens
-        let userId = null; // ID do usuário
-        let chatHistory = []; // Histórico do chat
+        let recognition;
+        let isSpeaking = false;
+        let staticTime = 0;
+        let alternateTimeout;
+        let userId = null;
+        let chatHistory = [];
 
         // Atualizar Slider de Velocidade
         function updateSliderBackground() {
@@ -203,7 +201,7 @@
             robotImg.src = ROBOT_STATIC;
         }
 
-        // Verifica Suporte ao Reconhecimento de Voz
+             // Verifica Suporte ao Reconhecimento de Voz
         function checkSpeechRecognitionSupport() {
             if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
                 const fallbackInput = document.getElementById("fallback-input");
@@ -286,7 +284,6 @@
                         messageElement.innerText = `You said: "${userMessage}"`;
                         userInput.value = "";
                         console.log("User typed:", userMessage);
-                        // Aqui você pode enviar a mensagem ao servidor, se necessário
                     }
                 });
             }
