--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -234,13 +234,18 @@ function speak(text, rate = 1, lang = "en-US") {
     utterance.onstart = () => {
         isSpeaking = true;
         robotImg.src = ROBOT_GIF; // Muda para GIF durante a fala
+        speakButton.innerText = "Samuel is talking"; // Atualiza o texto do botão
+        speakButton.disabled = true; // Desativa o botão
     };
 
     utterance.onend = () => {
         isSpeaking = false;
         robotImg.src = ROBOT_STATIC; // Retorna à imagem estática
+        speakButton.innerText = "Press to Speak"; // Restaura o texto do botão
+        speakButton.disabled = false; // Reativa o botão
     };
 
+    if (synth.speaking) synth.cancel(); // Cancela qualquer fala em andamento
     synth.speak(utterance);
 }
 
