--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -229,7 +229,10 @@ function speak(text, rate = 1, lang = "en-US") {
     const utterance = new SpeechSynthesisUtterance(text);
     utterance.voice = selectedVoice;
     utterance.lang = selectedVoice.lang;
-    utterance.rate = rate;
+
+    // Captura dinamicamente o valor do seletor de velocidade
+    const playbackSpeed = parseFloat(document.getElementById("voice-speed").value);
+    utterance.rate = playbackSpeed || rate; // Usa o valor do seletor ou a taxa padrão
 
     utterance.onstart = () => {
         isSpeaking = true;
