--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -418,6 +418,16 @@ ensureVoicesLoaded(() => {
             initializeConversation();
             startStaticImageTimer();
         };
+// Interrompe o sintetizador de voz ao sair da página
+        document.addEventListener("visibilitychange", () => {
+            if (document.hidden) {
+                const synth = window.speechSynthesis;
+                if (synth.speaking) {
+                    synth.cancel(); // Cancela qualquer fala em andamento
+                    console.log("Speech synthesis stopped as the page was hidden.");
+                }
+            }
+        });
     </script>
 </body>
 </html>
