--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -201,17 +201,34 @@ window.addEventListener("DOMContentLoaded", updateSliderBackground);
         }
 
              // Verifica Suporte ao Reconhecimento de Voz
-        function checkSpeechRecognitionSupport() {
-            if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
-                const fallbackInput = document.getElementById("fallback-input");
-                if (fallbackInput) fallbackInput.style.display = 'block';
-                speakButton.style.display = 'none';
-                messageElement.innerText = "Speech recognition is not supported. Please type your response below.";
+     function checkSpeechRecognitionSupport() {
+    if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
+        const fallbackInput = document.getElementById("fallback-input");
+        if (fallbackInput) fallbackInput.style.display = 'block';
+        speakButton.style.display = 'none';
+        messageElement.innerText = "Speech recognition is not supported. Please type your response below.";
+        messageElement.style.visibility = 'visible';
+        return false;
+    }
+
+    // Verifica a permissão para o microfone
+    if ('permissions' in navigator) {
+        navigator.permissions.query({ name: 'microphone' }).then(permissionStatus => {
+            if (permissionStatus.state === 'denied') {
                 messageElement.style.visibility = 'visible';
-                return false;
+                messageElement.innerText = "Microphone access is blocked. Please enable microphone permissions in your browser settings.";
+                speakButton.style.display = 'none';
+                console.warn("Microphone permission is blocked.");
             }
-            return true;
-        }
+        }).catch(err => {
+            console.error("Error checking microphone permissions:", err);
+        });
+    } else {
+        console.warn("Permissions API is not supported in this browser.");
+    }
+
+    return true;
+}
 
 // Função para TTS (Text-to-Speech)
 function speak(text, lang = "en-US") {
