--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -299,22 +299,30 @@ function setupSpeechRecognition() {
     if ('permissions' in navigator) {
         navigator.permissions.query({ name: 'microphone' }).then(permissionStatus => {
             if (permissionStatus.state === 'denied') {
+                // Bloqueia o uso do botão de fala e exibe uma mensagem
                 messageElement.style.visibility = 'visible';
                 messageElement.innerText = "Microphone access is blocked. Please enable microphone permissions in your browser settings.";
                 speakButton.style.display = 'none';
                 console.warn("Microphone permission is blocked.");
-                return; // Impede a configuração do reconhecimento de voz
+            } else if (permissionStatus.state === 'prompt') {
+                // Adiciona um aviso caso o navegador esteja aguardando permissão
+                messageElement.style.visibility = 'visible';
+                messageElement.innerText = "Microphone access needs to be granted. Please allow microphone access.";
+                console.warn("Microphone permission is pending.");
             } else {
-                console.log("Microphone permission granted.");
-                initializeRecognitionEvents(); // Configura os eventos do reconhecimento
+                // Permissão concedida, configura os eventos normalmente
+                initializeRecognitionEvents();
             }
         }).catch(err => {
             console.error("Error checking microphone permissions:", err);
-            initializeRecognitionEvents(); // Continua mesmo se houver erro ao verificar permissões
+            // Em caso de erro, assume que as permissões precisam ser verificadas manualmente
+            messageElement.style.visibility = 'visible';
+            messageElement.innerText = "Unable to verify microphone permissions. Please check your browser settings.";
         });
     } else {
         console.warn("Permissions API is not supported in this browser.");
-        initializeRecognitionEvents(); // Configura os eventos diretamente se a API não for suportada
+        // Continua com a configuração normal, mas avisa o usuário se algo falhar
+        initializeRecognitionEvents();
     }
 
     function initializeRecognitionEvents() {
